# RetrosynthesisClaw

./: .env.example  .gitignore  LICENSE  README.md  WORKFLOW_DOCUMENT.md  environment.yml  pyproject.toml
.claude/: settings.local.json
configs/: api_config.json  default.yaml
docs/: API_SCHEMA.md  EVALUATION_SCHEMA.md  architecture.md  constraints.md
docs/sdd/: README.md  sdd.md
frontend/: agent-monitor.html  api-config.html  index.html  script.js  styles.css  test.html
public/Yieldpredict/: api_residual_quantile_ydr.py
scripts/: run_demo.py
smiles/: SMILES修正模型参数记录与最优配置.md  prepare_smiles_data.py  train_smiles_repair.py
src/: main.py
src/retrosynthesis_claw/: __init__.py  agents.py  api.py  app.py  chemistry.py  config.py  evaluation.py  model_client.py  orchestrator.py  prompts.py  (+5 more)
tests/: test_after_restart.py  test_api.py  test_api_stream.py  test_api_utf8.py  test_chem_encoding.py  test_chemistry_steps.py  test_complete_flow.py  test_final_retro.py  test_free_apis.py  test_health.py  test_medium.py  test_model_client.py  test_molecule.py  test_ollama.py  test_ollama_chat.py  test_ollama_direct.py  test_ollama_minimal.py  test_ollama_no_key.py  test_ollama_simple.py  test_orchestrator.py  test_rdkit.py  test_response_format.py  test_retro_extended.py  test_retro_final.py  test_retro_molecule.py  test_retro_now.py  test_retro_simple.py  test_retro_simple2.py  test_retro_target.py  test_route_length.py  test_route_simple.py  test_strategy.py  test_stream.py  test_target_molecule.py  test_updated_client.py  test_via_api.py  test_yield_predictor.py
(+7 files in other folders)
